--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Xilai Li"
+  name             : "Xilai Li (李曦来)"
   avatar           : "profile.jpeg"
   bio              : "Applied Scientist, Amazon AWS AI"
   location         : "Arlington, VA"
