--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 locale                   : "en-US"
 title                    : "Xilai Li's Homepage"
 title_separator          : "-"
-name                     : &name "Xilai Li"
-description              : &description "personal description"
+name                     : &name "Xilai Li (李曦来)"
+description              : &description "Applied Scientist, Amazon AWS AI"
 url                      : https://xilaili.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "xilaili/xilaili.github.io"
