--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Xilai Li (李曦来)"
   avatar           : "profile.jpeg"
-  bio              : "Applied Scientist, Amazon AWS AI"
+  bio              : "Senior Applied Scientist, Amazon AWS Transcribe"
   location         : "Arlington, VA"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
